Bug 146382 - Can’t open file from Explorer-attached remote location
Summary: Can’t open file from Explorer-attached remote location
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.3.0.0 beta1+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: WebDAV
  Show dependency treegraph
 
Reported: 2021-12-23 08:27 UTC by Gabor Kelemen (Collabora)
Modified: 2021-12-24 17:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Start Center (200.45 KB, image/png)
2021-12-23 08:27 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2021-12-23 08:27:15 UTC
Created attachment 177105 [details]
Screenshot of the problem in Start Center

When a remote NextCloud is attached in Windows Explorer, trying to open files from it causes an error message saying “$file does not exist” while it definitely exists.
This does not happen with Nautilus on Ubuntu 18.04.

Steps to reproduce:
    1. Attach a remote NextCloud storage in Windows Explorer. I named ours share.allotropia.de
    2. Try to open a document from it with the normal File dialog or DnD (NOT Remote Files)

Actual results:
\\share.allotropia.deshare.allotropia.de@SSL\DavWWWRoot\remote.php\dav\files\gabor.kelemen.extern@allotropia.de\Documents\lorem-73.odt does not exist.

Expected results:
File opens.

LibreOffice details:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e63fe68fb1d0915b64fdf63f7fa6eed866fa3a0d
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Additional Information:
Bibisected using bibisect-win64-7.3 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=0b46361ef84a61100a0274a007062317607d097a  
author	Noel Grandin <noel@peralex.com>	Sat Nov 20 08:03:49 2021 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Nov 21 10:26:52 2021 +0100

tdf#133835 speedup calc autofilter (4)

Adding CC to: Noel Grandin
Comment 1 Kevin Suo 2021-12-23 10:09:14 UTC
The bibisected "first bad commit" does not necessarily mean that it *is* the real bad commit which broke this, but the bad commit should be in the good..bad range.

Could you please attach your bibisect log (git bisect log)?
Comment 2 Kevin Suo 2021-12-23 10:11:33 UTC
But anyway, commit 0b46361ef84a61100a0274a007062317607d097a is a possibility as it relates to INetURLObject::parseHost.
Comment 3 Noel Grandin 2021-12-23 11:14:55 UTC
possible fix here:
   https://gerrit.libreoffice.org/c/core/+/127352
Comment 4 Commit Notification 2021-12-24 10:28:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15bc492281111997a5da556961b923bb607642b6

tdf#146382 cant open file from Explorer-attached remote location

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-12-24 17:22:37 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/efa20d38fa51675e738ce50d6894b5df75debea0

tdf#146382 cant open file from Explorer-attached remote location

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.