tdf#146382 cant open file from Explorer-attached remote location

problem spotted by mikekaganski

regression from
    commit 0b46361ef84a61100a0274a007062317607d097a
    Author: Noel Grandin <noel@peralex.com>
    Date:   Sat Nov 20 08:03:49 2021 +0200
    tdf#133835 speedup calc autofilter (4)

where I changed the behaviour of parseHostOrNetBiosName from overwriting
the destination buffer to appending to it.

Since I want this behaviour (to achieve the optimisation I added),
modify the other call sites to accomodate.

Change-Id: I1bd3c7eade035a867c026364f5e114c1e652ca32