tools/source/fsys/urlobj.cxx
@@ -2898,17 +2898,14 @@ bool INetURLObject::setHost(std::u16string_view rTheHost,
 {
     if (!getSchemeInfo().m_bHost)
         return false;
-    OUStringBuffer aSynHost(rTheHost);
+    OUString aSynHost(rTheHost);
     bool bNetBiosName = false;
     switch (m_eScheme)
     {
         case INetProtocol::File:
             {
-                OUString sTemp(aSynHost.toString());
-                if (sTemp.equalsIgnoreAsciiCase("localhost"))
-                {
-                    aSynHost.setLength(0);
-                }
+                if (aSynHost.equalsIgnoreAsciiCase("localhost"))
+                    aSynHost = u"";
                 bNetBiosName = true;
             }
             break;
@@ -2922,11 +2919,12 @@ bool INetURLObject::setHost(std::u16string_view rTheHost,
                 return false;
             break;
     }
+    OUStringBuffer aSynHostBuf(static_cast<int>(rTheHost.length()));
     if (!parseHostOrNetBiosName(
             aSynHost.getStr(), aSynHost.getStr() + aSynHost.getLength(),
-            EncodeMechanism::WasEncoded, eCharset, bNetBiosName, &aSynHost))
+            EncodeMechanism::WasEncoded, eCharset, bNetBiosName, &aSynHostBuf))
         return false;
-    sal_Int32 nDelta = m_aHost.set(m_aAbsURIRef, aSynHost.makeStringAndClear());
+    sal_Int32 nDelta = m_aHost.set(m_aAbsURIRef, aSynHostBuf.makeStringAndClear());
     m_aPort += nDelta;
     m_aPath += nDelta;
     m_aQuery += nDelta;
@@ -3814,17 +3812,14 @@ bool INetURLObject::ConcatData(INetProtocol eTheScheme,
             m_aAbsURIRef.append('@');
         if (getSchemeInfo().m_bHost)
         {
-            OUStringBuffer aSynHost(rTheHost);
+            OUString aSynHost(rTheHost);
             bool bNetBiosName = false;
             switch (m_eScheme)
             {
                 case INetProtocol::File:
                     {
-                        OUString sTemp(aSynHost.toString());
-                        if (sTemp.equalsIgnoreAsciiCase( "localhost" ))
-                        {
-                            aSynHost.setLength(0);
-                        }
+                        if (aSynHost.equalsIgnoreAsciiCase( "localhost" ))
+                            aSynHost = u"";
                         bNetBiosName = true;
                     }
                     break;
@@ -3845,14 +3840,15 @@ bool INetURLObject::ConcatData(INetProtocol eTheScheme,
                     }
                     break;
             }
+            OUStringBuffer aSynHostBuf(aSynHost.getLength());
             if (!parseHostOrNetBiosName(
                     aSynHost.getStr(), aSynHost.getStr() + aSynHost.getLength(),
-                    EncodeMechanism::WasEncoded, RTL_TEXTENCODING_UTF8, bNetBiosName, &aSynHost))
+                    EncodeMechanism::WasEncoded, RTL_TEXTENCODING_UTF8, bNetBiosName, &aSynHostBuf))
             {
                 setInvalid();
                 return false;
             }
-            m_aHost.set(m_aAbsURIRef, aSynHost.makeStringAndClear(),
+            m_aHost.set(m_aAbsURIRef, aSynHostBuf.makeStringAndClear(),
                 m_aAbsURIRef.getLength());
             if (nThePort != 0)
             {
